# sirius

./: README.md  data0505.csv  data1905.csv  task2.py  task3.py
abb/0_SystemIdentification/: Lab0.sid  idprefs.mat
abb/4_RoboPCBPlacer/: README.md
abb/SystemIdentification/: Lab0.m  Lab0_simulink.slx
cpp/Lab1/: CMakeLists.txt  main.cpp
cpp/Lab2/: CMakeLists.txt  data.csv  main.cpp  parser.hpp  poly.hpp  test.py
cpp/Lab3/: CMakeLists.txt  data.txt  main.cpp
cpp/Lab4/: CMakeLists.txt  calculator.cpp  calculator.hpp  main.cpp
cpp/Lab5/: .gitignore  compile.sh  func.cpp  val.cpp
math_statistics/: exponentials.csv  mean-median.csv  task1.py  task2.py  task4.py
nonlinear_systems/individual_task/: ind_task.py
nonlinear_systems/project/: project_1.py  project_2.py  project_3.py  project_4.py  project_params.py
nonlinear_systems/task3/: 1_1.py  1_10.py  1_11.py  1_2_1.py  1_2_2.py  1_3.py  1_4.py  1_5.py  1_6.py  1_7.py  1_8.py  1_9.py
nonlinear_systems/task4/: 2_1.py  2_3.py  2_9.py
optimization/: task1.py
python/lab1/: .gitignore  pyproject.toml  requirements.txt
python/lab1/src/lab1/: __init__.py  __main__.py  main.py
python/lab1/src/lab1/submodules/: get_pi.py
python/lab1/src/tests/: test.py
python/lab1/tests/: PathFunctions.py
python/lab2/: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
python/lab2/data/: data.txt
python/lab2/src/lab2/: __main__.py  main.py
python/lab2/src/tests/: __init__.py  test.py
python/lab5/: .gitlab-ci.yml  README.md  pyproject.toml
python/lab5/src/lab5/: Transform2D.py  __init__.py  __main__.py  main.py
python/lab5/src/tests/: test.py
python/lab5/tests/: ExtraFunctions.py  PathFunctions.py  test1.py
python/lab5/tests/etalon/: Transform2D.pybs  gen_data.pybs  main.pybs
python/lab6/: pyproject.toml
python/lab6/src/lab6/: __init__.py  __main__.py  planner.py
python/lab6/src/tests/: test.py
python/lab7/: links.json  pyproject.toml
python/lab7/src/lab7/: __init__.py  __main__.py  forward_kinematics.py
python/lab7/src/tests/: test.py
sensor_fusion/: 3observers.csv  LeastSquares.csv  exam-observations-polar.csv  exam-track.csv  observations.csv  observationscoord.csv  observationspolar.csv  task1.ipynb  task2.ipynb  task3.ipynb  task4.ipynb  task5.ipynb  task6.ipynb  task7.ipynb  track.csv  trackturn.csv
stm32/: .gitignore
(+598 files in other folders)
