[build-system]
requires = [
  "setuptools",
  "setuptools-scm",
  "wheel",
  "tk",
]
build-backend = "setuptools.build_meta"

[project]
name = "lab5"
version = "1.0.0"
authors = [
    { name = "Artem Kondratev", email = "artemkondratev5@gmail.com" }
]
description = "Transform2D"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["pi"]
license = { text = "GSL" }
dependencies = [
]

[tool.distutils.egg_info]
egg_base = ".cache/egg-info"

